Develop (#13)
* feat: add status endpoint

* fix: change API baseUrl logic

* style: format code with biome

* style: format code with go fmt

* refactor: remove unused code

* chore: add Docker configuration to resolve next-auth issues in Vercel dev environment

* style: format code with biome

* feat: add logo images and update Logo component to use theme-based icons

* feat: add contribution graph to overview (#12)

* chore: move status handler file

* wip: creating contribution graph in overview

* refactor: implement contribution days service and update handler

* feat: add contribution graph to overview

* chore: remove console

* style: format code with go fmt

* style: format code with biome

* fix: change to make demo work
